# prompt-recall

./: README.md  main.py  pyproject.toml  schema.sql
prompt_recall/: __init__.py  alternates.py  api.py  cli.py  config.py  db.py  get_config.py  parser.py  vectorstore.py  watcher.py
templates/: index.html  session.html
