[project]
name = "prompt-recall"
version = "0.1.0"
description = "A tool to parse, index, and search AI chat history via FastAPI and vector search."
authors = [{ name="Ernan Hughes", email="ernanhughes@gmail.com" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "pgvector",
    "watchdog",
    "jinja2",
    "numpy",
    "ollama",
    "python-dotenv",
    "python-multipart",
    "requests"
]
readme = "README.md"
license = "MIT"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["prompt_recall"]
